# portable

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  NEWS.md  PKGBUILD  README.md  RELEASE.md  SECURITY.md  config  example.toml  flatpak-info  go.work  open.sh  portable-config.c  portable-helper.sh  portable-packer  portable-pools  portable.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  go.yml
doc/: 01-cli-arguments.md  03-desktop-entry.md  Why Portable.md  X11.md
doc/General/: 00-installing.md  01-cli-arguments.md  02-file-forwarding.md
doc/dev/: bench.sh  conf-buscheck  conf-perf  conf-unifiedpush  perf.toml
doc/packager/: 01-cli-arguments.md  02-X11.md  03-desktop-entry.md  04-mpris.md  05-general-configurations.md  06-holes.md  07-packer.md  08-binaries.md  99-env-and-input.md  legacy-config
doc/user/: 01-cli-arguments.md  02-theming.md  03-multiple-instances.md  99-env-and-input.md
lib/: addEnv  build.sh  flatpak-info  helper  helper-legacy  open  package.sh  portable-help.sh  portable-pools
lib/daemon/: camera.go  cmdline.go  conf.go  confDef.go  console.go  daemon.go  defaultConf.go  exec_test.go  expose.go  go.mod  go.sum  gpu.go  help.go  input_dev.go  legacyConf.go  legacy_conf_structs.go  logger.go  multiInstance.go  nsswitch.go  passwd.go  portals.go  readConf.go  startUnits.go  stopWorker.go  trayWake.go  vars.go  wayland.go
lib/gpu/: go.mod  list.go  (+1 more)
src/: config.rs  config_definition.rs  config_legacy.rs  config_toml.rs  consts.rs  legacy_config.rs  logger.rs  main.rs  stop.rs
(+44 files in other folders)
