[package]
name = "portable-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
legacy_conf = { path = "./lib/legacy_conf" }
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "sync", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
nix = { version = "0.31.3", features = ["term"] }
jiff = { version = "0.2.34", features = ["std"], default-features = false }

[workspace]
resolver = "3"
members = ["lib/legacy_conf"]
exclude = ["lib/init"]